fixed the broken dark mode background

--- a/Gratuities.client/src/assets/scss/main.scss
+++ b/Gratuities.client/src/assets/scss/main.scss
@@ -10,7 +10,7 @@ body{
   &.dark{
     background: linear-gradient(-45deg, #717388, #474558, #424242, #9897cb);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	// animation: gradient 15s ease infinite;
 	height: 100vh;
   color: white;
 }
